--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ transformers==4.37.2
 accelerate==0.26.1
 bitsandbytes==0.42.0
 peft==0.8.1
+gradio==4.16.0
 torch==2.2.0 --index-url https://download.pytorch.org/whl/cu121
